# zsh-clean-history

./: .gitignore  .mise.toml  .pylintrc  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  clean_history.py  codecov.yml  pyproject.toml  renovate.json  requirements-dev.txt  test_clean_history.py  zsh-clean-history.plugin.zsh
.claude/rules/: development-workflows.md
.github/: copilot-instructions.md
.github/workflows/: audit.yml  check.yml  lint.yml  release.yml
benches/: failed_similar_lookup.rs
completions/: _zsh-clean-history  _zsh-clean-history.ps1  zsh-clean-history.bash  zsh-clean-history.elv  zsh-clean-history.fish
man/: zsh-clean-history.1
src/: allowlist.rs  clean.rs  cleaner.rs  cli_definition.rs  exits.rs  history.rs  lib.rs  log.rs  main.rs  paths.rs  secrets.rs  settings.rs  similarity.rs
tests/: cli.rs  tooling.rs
